# tracer

./: .editorconfig  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  sites.txt
tracer/: __init__.py  __main__.py  settings.conf  tracer.py
tracer/gui/: app.py
tracer/gui/templates/: base.html
tracer/models/: category.py  parser.py  textanimation.py  website.py  websitepool.py
tracer/src/: __init__.py  httpheader.py  logo.py  pool.py
tracer/src/data/: __init__.py  httpheader.json  pool.json
tracer/src/models/: __init__.py  category.py  parser.py  result.py  textanimation.py  website.py  websitepool.py
tracer/src/raw/: httpheader.json  logo.txt  pool.json
